# ChatAssistantPDF

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_checks.sh  run_tests.sh
app/: RAG.py  VectorStore.py  api.py  app.py  llm.py  main.py  session_manager.py  vector_store.py
tests/: tests_api.py
