[project]
name = "chatassistantpdf"
version = "0.1.0"
description = "This project is a backend application built with FastAPI that enables users to ask questions in natural language. The system integrates a Large Language Model (LLM), which generates responses based on private documents such as PDFs, notes, and scientific articles. The goal is to provide an intelligent, document-aware question–answering interface."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.47.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "hf-xet>=1.1.10",
    "huggingface-hub>=0.34.4",
    "numpy>=2.3.3",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "ruff>=0.13.1",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
    "vulture>=2.14",
]

[tool.vulture]
min_confidence = 60
ignore_names = [
    "new_session",
    "ask_question",
    "upload_file",
    "root",
    "redirect",
    "session_history",
    "session_docs"
]

[tool.ruff]
line-length = 115
exclude = [".git", "__pycache__", "build", "dist", "venv"]
# Enable more rule sets
lint.select = ["E", "F", "W"]   # E=pycodestyle errors, F=pyflakes, W=pycodestyle warnings
lint.extend-select = ["B", "I", "N", "UP", "C4", "SIM"]
